# LMS_KTLTNC

./: LMS - Library Management System.pptx  LMS_UseCase.drawio
LMS/: AUTO_SAVE_FIXES.md  Account.cpp  Account.h  Book.cpp  Book.h  CMakeLists.txt  Category.cpp  Category.h  ENHANCEMENTS.md  Librarian.cpp  Librarian.h  Loan.cpp  Loan.h  LoanDetail.cpp  LoanDetail.h  README.md  main.cpp
LMS/data/: accounts.txt  books.txt  borrow_records.txt  librarians.txt  readers.txt
LMS/include/: Book.h  BorrowRecord.h  FileManager.h  Librarian.h  Library.h  Menu.h  Reader.h  User.h  Utils.h
LMS/src/: Book.cpp  BorrowRecord.cpp  FileManager.cpp  Librarian.cpp  Library.cpp  Menu.cpp  Reader.cpp  User.cpp  Utils.cpp  main.cpp
